--- a/13-object-relational-mapping/lab/package.json
+++ b/13-object-relational-mapping/lab/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "jest": "^23.6.0",
+    "mongodb": "^3.1.8",
     "mongodb-memory-server": "^2.6.2",
     "mongoose": "^5.3.8",
     "require-dir": "^1.1.0",
