--- a/13-object-relational-mapping/lab/package.json
+++ b/13-object-relational-mapping/lab/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --verbose --coverage"
   },
   "author": "Ryan Milton",
   "license": "MIT",
